[package]
name = "actix-web-cron-example"
version = "0.1.0"
authors = ["Patrick Fitzgerald <paddyfitz@gmail.com>"]
edition = "2018"

[dependencies]

# actix
actix = "^0.9"
actix-web-actors = "^2.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"

# Date and time library for Rust
chrono = { version = "^0.4" }

# A cron expression parser and schedule explorer.
cron = "0.6.1"