[package]
name = "actix-web-cron-example"
version = "0.1.0"
authors = ["Patrick Fitzgerald <paddyfitz@gmail.com>"]
edition = "2018"

[dependencies]

# actix
actix = "0.13.0"
actix-web-actors = "4.1.0"
actix-web = "4.2.1"
actix-rt = "2.7.0"

# Date and time library for Rust
chrono = "0.4.22"

# tokio = { version = "1.21.1", features = ["full"] }
tokio_schedule = "0.3.0"
