[package]
name = "actix-web-cron-example"
version = "0.1.0"
authors = ["Patrick Fitzgerald <paddyfitz@gmail.com>"]
edition = "2018"

[dependencies]

# actix
actix-web = "4.2.1"
actix-rt = "2.7.0"

# Date and time library for Rust
chrono = "0.4.22"

# schedule tasks in tokio runtime
tokio_schedule = "0.3.0"
